# Model_Predictive_Control_Cpp_3DoF-KF-MPC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Header1.h  globals.h  gnuplot-iostream.h
src/: MPC_main.cpp  Matrices.cpp  Signals.cpp  Weights_Lims.cpp  controller.cpp  system_ode.cpp  three_dof_tuning.cpp
